// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`initBehaviorDir.brain given: [case1] size=nano, guard=light when: [t0] the route is walked in bhrain order then: the walk matches the snapshot 1`] = `
[
  "1.vision → claude-opus-5-5[1m]",
  "5.1.execution.from_vision → claude-sonnet-5-5[1m]",
  "5.3.verification → claude-sonnet-5-5[1m]",
]
`;

exports[`initBehaviorDir.brain given: [case2] size=nano, guard=heavy when: [t0] the route is walked in bhrain order then: the walk matches the snapshot 1`] = `
[
  "1.vision → claude-opus-5-5[1m]",
  "5.1.execution.from_vision → claude-sonnet-5-5[1m]",
  "5.3.verification → claude-sonnet-5-5[1m]",
]
`;

exports[`initBehaviorDir.brain given: [case3] size=mini, guard=light when: [t0] the route is walked in bhrain order then: the walk matches the snapshot 1`] = `
[
  "1.vision → claude-opus-5-5[1m]",
  "2.1.criteria.blackbox → claude-opus-5-5[1m] (inherited)",
  "2.2.criteria.blackbox.matrix → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.flagged._ → claude-opus-5-5[1m] (inherited)",
  "3.1.3.research.internal.product.code.prod._ → claude-opus-5-5[1m] (inherited)",
  "3.1.3.research.internal.product.code.test._ → claude-opus-5-5[1m] (inherited)",
  "3.3.1.blueprint.product → claude-opus-5-5[1m]",
  "4.1.roadmap → claude-sonnet-5-5[1m]",
  "5.1.execution.phase0_to_phaseN → claude-sonnet-5-5[1m]",
  "5.3.verification → claude-sonnet-5-5[1m]",
  "5.5.playtest → claude-sonnet-5-5[1m]",
]
`;

exports[`initBehaviorDir.brain given: [case4] size=mini, guard=heavy when: [t0] the route is walked in bhrain order then: the walk matches the snapshot 1`] = `
[
  "1.vision → claude-opus-5-5[1m]",
  "2.1.criteria.blackbox → claude-opus-5-5[1m]",
  "2.2.criteria.blackbox.matrix → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.flagged._ → claude-opus-5-5[1m] (inherited)",
  "3.1.3.research.internal.product.code.prod._ → claude-opus-5-5[1m] (inherited)",
  "3.1.3.research.internal.product.code.test._ → claude-opus-5-5[1m] (inherited)",
  "3.3.1.blueprint.product → claude-opus-5-5[1m]",
  "4.1.roadmap → claude-sonnet-5-5[1m]",
  "5.1.execution.phase0_to_phaseN → claude-sonnet-5-5[1m]",
  "5.3.verification → claude-sonnet-5-5[1m]",
  "5.5.playtest → claude-sonnet-5-5[1m]",
]
`;

exports[`initBehaviorDir.brain given: [case5] size=medi, guard=light when: [t0] the route is walked in bhrain order then: the walk matches the snapshot 1`] = `
[
  "1.vision → claude-opus-5-5[1m]",
  "2.1.criteria.blackbox → claude-opus-5-5[1m] (inherited)",
  "2.2.criteria.blackbox.matrix → claude-opus-5-5[1m] (inherited)",
  "2.3.criteria.blueprint → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.access._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.claims._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.flagged._ → claude-opus-5-5[1m] (inherited)",
  "3.1.3.research.internal.product.code.prod._ → claude-opus-5-5[1m] (inherited)",
  "3.1.3.research.internal.product.code.test._ → claude-opus-5-5[1m] (inherited)",
  "3.1.5.research.reflection.product.audience._ → claude-opus-5-5[1m] (inherited)",
  "3.1.5.research.reflection.product.premortem._ → claude-opus-5-5[1m] (inherited)",
  "3.1.5.research.reflection.product.rootcause._ → claude-opus-5-5[1m] (inherited)",
  "3.2.distill.repros.experience._ → claude-opus-5-5[1m]",
  "3.3.1.blueprint.product → claude-opus-5-5[1m]",
  "4.1.roadmap → claude-sonnet-5-5[1m]",
  "5.1.execution.phase0_to_phaseN → claude-sonnet-5-5[1m]",
  "5.2.evaluation → claude-sonnet-5-5[1m]",
  "5.3.verification → claude-sonnet-5-5[1m]",
  "5.5.playtest → claude-sonnet-5-5[1m]",
]
`;

exports[`initBehaviorDir.brain given: [case6] size=medi, guard=heavy when: [t0] the route is walked in bhrain order then: the walk matches the snapshot 1`] = `
[
  "1.vision → claude-opus-5-5[1m]",
  "2.1.criteria.blackbox → claude-opus-5-5[1m]",
  "2.2.criteria.blackbox.matrix → claude-opus-5-5[1m] (inherited)",
  "2.3.criteria.blueprint → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.access._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.claims._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.flagged._ → claude-opus-5-5[1m] (inherited)",
  "3.1.3.research.internal.product.code.prod._ → claude-opus-5-5[1m] (inherited)",
  "3.1.3.research.internal.product.code.test._ → claude-opus-5-5[1m] (inherited)",
  "3.1.5.research.reflection.product.audience._ → claude-opus-5-5[1m] (inherited)",
  "3.1.5.research.reflection.product.premortem._ → claude-opus-5-5[1m] (inherited)",
  "3.1.5.research.reflection.product.rootcause._ → claude-opus-5-5[1m] (inherited)",
  "3.2.distill.repros.experience._ → claude-opus-5-5[1m]",
  "3.3.1.blueprint.product → claude-opus-5-5[1m]",
  "4.1.roadmap → claude-sonnet-5-5[1m]",
  "5.1.execution.phase0_to_phaseN → claude-sonnet-5-5[1m]",
  "5.2.evaluation → claude-sonnet-5-5[1m]",
  "5.3.verification → claude-sonnet-5-5[1m]",
  "5.5.playtest → claude-sonnet-5-5[1m]",
]
`;

exports[`initBehaviorDir.brain given: [case7] size=mega, guard=light when: [t0] the route is walked in bhrain order then: the walk matches the snapshot 1`] = `
[
  "1.vision → claude-opus-5-5[1m]",
  "2.1.criteria.blackbox → claude-opus-5-5[1m] (inherited)",
  "2.2.criteria.blackbox.matrix → claude-opus-5-5[1m] (inherited)",
  "2.3.criteria.blueprint → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.access._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.claims._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.domain._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.domain.terms → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.flagged._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.references._ → claude-opus-5-5[1m] (inherited)",
  "3.1.2.research.external.factory.oss.levers._ → claude-opus-5-5[1m] (inherited)",
  "3.1.2.research.external.factory.templates._ → claude-opus-5-5[1m] (inherited)",
  "3.1.2.research.external.factory.testloops._ → claude-opus-5-5[1m] (inherited)",
  "3.1.3.research.internal.product.code.prod._ → claude-opus-5-5[1m] (inherited)",
  "3.1.3.research.internal.product.code.test._ → claude-opus-5-5[1m] (inherited)",
  "3.1.4.research.internal.factory.blockers._ → claude-opus-5-5[1m] (inherited)",
  "3.1.4.research.internal.factory.opports._ → claude-opus-5-5[1m] (inherited)",
  "3.1.5.research.reflection.product.audience._ → claude-opus-5-5[1m] (inherited)",
  "3.1.5.research.reflection.product.premortem._ → claude-opus-5-5[1m] (inherited)",
  "3.1.5.research.reflection.product.rootcause._ → claude-opus-5-5[1m] (inherited)",
  "3.2.distill.domain._ → claude-opus-5-5[1m]",
  "3.2.distill.factory.upgrades._ → claude-opus-5-5[1m] (inherited)",
  "3.2.distill.repros.experience._ → claude-opus-5-5[1m]",
  "3.3.0.blueprint.factory → claude-opus-5-5[1m] (inherited)",
  "3.3.1.blueprint.product → claude-opus-5-5[1m]",
  "4.1.roadmap → claude-sonnet-5-5[1m]",
  "5.1.execution.phase0_to_phaseN → claude-sonnet-5-5[1m]",
  "5.2.evaluation → claude-sonnet-5-5[1m]",
  "5.3.verification → claude-sonnet-5-5[1m]",
  "5.5.playtest → claude-sonnet-5-5[1m]",
]
`;

exports[`initBehaviorDir.brain given: [case8] size=mega, guard=heavy when: [t0] the route is walked in bhrain order then: the walk matches the snapshot 1`] = `
[
  "1.vision → claude-opus-5-5[1m]",
  "2.1.criteria.blackbox → claude-opus-5-5[1m]",
  "2.2.criteria.blackbox.matrix → claude-opus-5-5[1m] (inherited)",
  "2.3.criteria.blueprint → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.access._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.claims._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.domain._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.domain.terms → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.flagged._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.references._ → claude-opus-5-5[1m] (inherited)",
  "3.1.2.research.external.factory.oss.levers._ → claude-opus-5-5[1m] (inherited)",
  "3.1.2.research.external.factory.templates._ → claude-opus-5-5[1m] (inherited)",
  "3.1.2.research.external.factory.testloops._ → claude-opus-5-5[1m] (inherited)",
  "3.1.3.research.internal.product.code.prod._ → claude-opus-5-5[1m] (inherited)",
  "3.1.3.research.internal.product.code.test._ → claude-opus-5-5[1m] (inherited)",
  "3.1.4.research.internal.factory.blockers._ → claude-opus-5-5[1m] (inherited)",
  "3.1.4.research.internal.factory.opports._ → claude-opus-5-5[1m] (inherited)",
  "3.1.5.research.reflection.product.audience._ → claude-opus-5-5[1m] (inherited)",
  "3.1.5.research.reflection.product.premortem._ → claude-opus-5-5[1m] (inherited)",
  "3.1.5.research.reflection.product.rootcause._ → claude-opus-5-5[1m] (inherited)",
  "3.2.distill.domain._ → claude-opus-5-5[1m]",
  "3.2.distill.factory.upgrades._ → claude-opus-5-5[1m] (inherited)",
  "3.2.distill.repros.experience._ → claude-opus-5-5[1m]",
  "3.3.0.blueprint.factory → claude-opus-5-5[1m] (inherited)",
  "3.3.1.blueprint.product → claude-opus-5-5[1m]",
  "4.1.roadmap → claude-sonnet-5-5[1m]",
  "5.1.execution.phase0_to_phaseN → claude-sonnet-5-5[1m]",
  "5.2.evaluation → claude-sonnet-5-5[1m]",
  "5.3.verification → claude-sonnet-5-5[1m]",
  "5.5.playtest → claude-sonnet-5-5[1m]",
]
`;

exports[`initBehaviorDir.brain given: [case9] size=giga, guard=light when: [t0] the route is walked in bhrain order then: the walk matches the snapshot 1`] = `
[
  "1.vision → claude-opus-5-5[1m]",
  "2.1.criteria.blackbox → claude-opus-5-5[1m] (inherited)",
  "2.2.criteria.blackbox.matrix → claude-opus-5-5[1m] (inherited)",
  "2.3.criteria.blueprint → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.access._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.claims._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.domain._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.domain.terms → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.flagged._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.references._ → claude-opus-5-5[1m] (inherited)",
  "3.1.2.research.external.factory.oss.levers._ → claude-opus-5-5[1m] (inherited)",
  "3.1.2.research.external.factory.templates._ → claude-opus-5-5[1m] (inherited)",
  "3.1.2.research.external.factory.testloops._ → claude-opus-5-5[1m] (inherited)",
  "3.1.3.research.internal.product.code.prod._ → claude-opus-5-5[1m] (inherited)",
  "3.1.3.research.internal.product.code.test._ → claude-opus-5-5[1m] (inherited)",
  "3.1.4.research.internal.factory.blockers._ → claude-opus-5-5[1m] (inherited)",
  "3.1.4.research.internal.factory.opports._ → claude-opus-5-5[1m] (inherited)",
  "3.1.5.research.reflection.product.audience._ → claude-opus-5-5[1m] (inherited)",
  "3.1.5.research.reflection.product.premortem._ → claude-opus-5-5[1m] (inherited)",
  "3.1.5.research.reflection.product.rootcause._ → claude-opus-5-5[1m] (inherited)",
  "3.2.distill.domain._ → claude-opus-5-5[1m]",
  "3.2.distill.factory.upgrades._ → claude-opus-5-5[1m] (inherited)",
  "3.2.distill.repros.experience._ → claude-opus-5-5[1m]",
  "3.3.0.blueprint.factory → claude-opus-5-5[1m] (inherited)",
  "3.3.1.blueprint.product → claude-opus-5-5[1m]",
  "4.1.roadmap → claude-sonnet-5-5[1m]",
  "5.1.execution.phase0_to_phaseN → claude-sonnet-5-5[1m]",
  "5.2.evaluation → claude-sonnet-5-5[1m]",
  "5.3.verification → claude-sonnet-5-5[1m]",
  "5.5.playtest → claude-sonnet-5-5[1m]",
]
`;

exports[`initBehaviorDir.brain given: [case10] size=giga, guard=heavy when: [t0] the route is walked in bhrain order then: the walk matches the snapshot 1`] = `
[
  "1.vision → claude-opus-5-5[1m]",
  "2.1.criteria.blackbox → claude-opus-5-5[1m]",
  "2.2.criteria.blackbox.matrix → claude-opus-5-5[1m] (inherited)",
  "2.3.criteria.blueprint → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.access._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.claims._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.domain._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.domain.terms → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.flagged._ → claude-opus-5-5[1m] (inherited)",
  "3.1.1.research.external.product.references._ → claude-opus-5-5[1m] (inherited)",
  "3.1.2.research.external.factory.oss.levers._ → claude-opus-5-5[1m] (inherited)",
  "3.1.2.research.external.factory.templates._ → claude-opus-5-5[1m] (inherited)",
  "3.1.2.research.external.factory.testloops._ → claude-opus-5-5[1m] (inherited)",
  "3.1.3.research.internal.product.code.prod._ → claude-opus-5-5[1m] (inherited)",
  "3.1.3.research.internal.product.code.test._ → claude-opus-5-5[1m] (inherited)",
  "3.1.4.research.internal.factory.blockers._ → claude-opus-5-5[1m] (inherited)",
  "3.1.4.research.internal.factory.opports._ → claude-opus-5-5[1m] (inherited)",
  "3.1.5.research.reflection.product.audience._ → claude-opus-5-5[1m] (inherited)",
  "3.1.5.research.reflection.product.premortem._ → claude-opus-5-5[1m] (inherited)",
  "3.1.5.research.reflection.product.rootcause._ → claude-opus-5-5[1m] (inherited)",
  "3.2.distill.domain._ → claude-opus-5-5[1m]",
  "3.2.distill.factory.upgrades._ → claude-opus-5-5[1m] (inherited)",
  "3.2.distill.repros.experience._ → claude-opus-5-5[1m]",
  "3.3.0.blueprint.factory → claude-opus-5-5[1m] (inherited)",
  "3.3.1.blueprint.product → claude-opus-5-5[1m]",
  "4.1.roadmap → claude-sonnet-5-5[1m]",
  "5.1.execution.phase0_to_phaseN → claude-sonnet-5-5[1m]",
  "5.2.evaluation → claude-sonnet-5-5[1m]",
  "5.3.verification → claude-sonnet-5-5[1m]",
  "5.5.playtest → claude-sonnet-5-5[1m]",
]
`;

exports[`initBehaviorDir.brain given: [case11] every guard that init can write, across sizes and variants when: [t0] each peer reviewer lane is read then: every lane brain matches the snapshot baseline 1`] = `
[
  "nano.light · 1.vision · dimensional-decomposition → (bhrain default)",
  "nano.light · 1.vision · experience-coverage → (bhrain default)",
  "nano.light · 5.1.execution.from_vision · repo-rules → (bhrain default)",
  "nano.light · 5.1.execution.from_vision · mech-failhides → (bhrain default)",
  "nano.light · 5.1.execution.from_vision · mech-decode-friction → (bhrain default)",
  "nano.light · 5.1.execution.from_vision · arch-opport-decomposition → (bhrain default)",
  "nano.light · 5.1.execution.from_vision · arch-smell-scopeleaks → (bhrain default)",
  "nano.light · 5.1.execution.from_vision · arch-hazards-maintenance → (bhrain default)",
  "nano.light · 5.1.execution.from_vision · arch-hazards-behavior → (bhrain default)",
  "nano.light · 5.1.execution.from_vision · behavior-intent-coverage → (bhrain default)",
  "nano.light · 5.1.execution.from_vision · ergo-friction-hazards → (bhrain default)",
  "nano.light · 5.1.execution.from_vision · enroll-impl-behavior-intent → claude-sonnet-5-5[1m]",
  "nano.light · 5.1.execution.from_vision · enroll-impl-arch-defects → claude-sonnet-5-5[1m]",
  "nano.light · 5.3.verification · repo-rules → (bhrain default)",
  "nano.light · 5.3.verification · ergo-contract-snapshots → (bhrain default)",
  "nano.light · 5.3.verification · mech-external-contracts → (bhrain default)",
  "nano.light · 5.3.verification · ergo-acceptance-journey-coverage → (bhrain default)",
  "nano.light · 5.3.verification · behavior-experience-coverage → (bhrain default)",
  "nano.light · 5.3.verification · ergo-snapshot-visual-blemishes → (bhrain default)",
  "nano.light · 5.3.verification · mech-given-when-then → (bhrain default)",
  "nano.light · 5.3.verification · mech-test-intent → (bhrain default)",
  "nano.light · 5.3.verification · mech-test-scope-purity → (bhrain default)",
  "nano.light · 5.3.verification · enroll-verif-snapshot-coverage → claude-sonnet-5-5[1m]",
  "nano.light · 5.3.verification · enroll-verif-snapshot-blemishes → claude-sonnet-5-5[1m]",
  "nano.light · 5.3.verification · enroll-verif-test-intent → claude-sonnet-5-5[1m]",
  "nano.heavy · 1.vision · dimensional-decomposition → (bhrain default)",
  "nano.heavy · 1.vision · experience-coverage → (bhrain default)",
  "nano.heavy · 5.1.execution.from_vision · repo-rules → (bhrain default)",
  "nano.heavy · 5.1.execution.from_vision · mech-failhides → (bhrain default)",
  "nano.heavy · 5.1.execution.from_vision · mech-decode-friction → (bhrain default)",
  "nano.heavy · 5.1.execution.from_vision · arch-opport-decomposition → (bhrain default)",
  "nano.heavy · 5.1.execution.from_vision · arch-smell-scopeleaks → (bhrain default)",
  "nano.heavy · 5.1.execution.from_vision · arch-hazards-maintenance → (bhrain default)",
  "nano.heavy · 5.1.execution.from_vision · arch-hazards-behavior → (bhrain default)",
  "nano.heavy · 5.1.execution.from_vision · behavior-intent-coverage → (bhrain default)",
  "nano.heavy · 5.1.execution.from_vision · ergo-friction-hazards → (bhrain default)",
  "nano.heavy · 5.1.execution.from_vision · enroll-impl-behavior-intent → claude-sonnet-5-5[1m]",
  "nano.heavy · 5.1.execution.from_vision · enroll-impl-arch-defects → claude-sonnet-5-5[1m]",
  "nano.heavy · 5.3.verification · repo-rules → (bhrain default)",
  "nano.heavy · 5.3.verification · ergo-contract-snapshots → (bhrain default)",
  "nano.heavy · 5.3.verification · mech-external-contracts → (bhrain default)",
  "nano.heavy · 5.3.verification · ergo-acceptance-journey-coverage → (bhrain default)",
  "nano.heavy · 5.3.verification · behavior-experience-coverage → (bhrain default)",
  "nano.heavy · 5.3.verification · ergo-snapshot-visual-blemishes → (bhrain default)",
  "nano.heavy · 5.3.verification · mech-given-when-then → (bhrain default)",
  "nano.heavy · 5.3.verification · mech-test-intent → (bhrain default)",
  "nano.heavy · 5.3.verification · mech-test-scope-purity → (bhrain default)",
  "nano.heavy · 5.3.verification · enroll-verif-snapshot-coverage → claude-sonnet-5-5[1m]",
  "nano.heavy · 5.3.verification · enroll-verif-snapshot-blemishes → claude-sonnet-5-5[1m]",
  "nano.heavy · 5.3.verification · enroll-verif-test-intent → claude-sonnet-5-5[1m]",
  "giga.light · 1.vision · dimensional-decomposition → (bhrain default)",
  "giga.light · 1.vision · experience-coverage → (bhrain default)",
  "giga.light · 3.3.1.blueprint.product · repo-rules → (bhrain default)",
  "giga.light · 3.3.1.blueprint.product · mech-failhides → (bhrain default)",
  "giga.light · 3.3.1.blueprint.product · mech-decode-friction → (bhrain default)",
  "giga.light · 3.3.1.blueprint.product · arch-opport-decomposition → (bhrain default)",
  "giga.light · 3.3.1.blueprint.product · arch-smell-scopeleaks → (bhrain default)",
  "giga.light · 3.3.1.blueprint.product · arch-hazards-maintenance → (bhrain default)",
  "giga.light · 3.3.1.blueprint.product · arch-hazards-behavior → (bhrain default)",
  "giga.light · 3.3.1.blueprint.product · arch-ambiguous-terms → (bhrain default)",
  "giga.light · 3.3.1.blueprint.product · ergo-acceptance-journey-coverage → (bhrain default)",
  "giga.light · 3.3.1.blueprint.product · ergo-snapshot-visual-blemishes → (bhrain default)",
  "giga.light · 3.3.1.blueprint.product · enroll-blueprint-arch-defects → claude-sonnet-5-5[1m]",
  "giga.light · 3.3.1.blueprint.product · enroll-blueprint-behavior-intent → claude-sonnet-5-5[1m]",
  "giga.light · 5.1.execution.phase0_to_phaseN · repo-rules → (bhrain default)",
  "giga.light · 5.1.execution.phase0_to_phaseN · mech-failhides → (bhrain default)",
  "giga.light · 5.1.execution.phase0_to_phaseN · mech-decode-friction → (bhrain default)",
  "giga.light · 5.1.execution.phase0_to_phaseN · arch-opport-decomposition → (bhrain default)",
  "giga.light · 5.1.execution.phase0_to_phaseN · arch-smell-scopeleaks → (bhrain default)",
  "giga.light · 5.1.execution.phase0_to_phaseN · arch-hazards-maintenance → (bhrain default)",
  "giga.light · 5.1.execution.phase0_to_phaseN · arch-hazards-behavior → (bhrain default)",
  "giga.light · 5.1.execution.phase0_to_phaseN · behavior-intent-coverage → (bhrain default)",
  "giga.light · 5.1.execution.phase0_to_phaseN · ergo-friction-hazards → (bhrain default)",
  "giga.light · 5.1.execution.phase0_to_phaseN · enroll-impl-behavior-intent → claude-sonnet-5-5[1m]",
  "giga.light · 5.1.execution.phase0_to_phaseN · enroll-impl-arch-defects → claude-sonnet-5-5[1m]",
  "giga.light · 5.3.verification · repo-rules → (bhrain default)",
  "giga.light · 5.3.verification · ergo-contract-snapshots → (bhrain default)",
  "giga.light · 5.3.verification · mech-external-contracts → (bhrain default)",
  "giga.light · 5.3.verification · ergo-acceptance-journey-coverage → (bhrain default)",
  "giga.light · 5.3.verification · behavior-experience-coverage → (bhrain default)",
  "giga.light · 5.3.verification · ergo-snapshot-visual-blemishes → (bhrain default)",
  "giga.light · 5.3.verification · mech-given-when-then → (bhrain default)",
  "giga.light · 5.3.verification · mech-test-intent → (bhrain default)",
  "giga.light · 5.3.verification · mech-test-scope-purity → (bhrain default)",
  "giga.light · 5.3.verification · enroll-verif-snapshot-coverage → claude-sonnet-5-5[1m]",
  "giga.light · 5.3.verification · enroll-verif-snapshot-blemishes → claude-sonnet-5-5[1m]",
  "giga.light · 5.3.verification · enroll-verif-test-intent → claude-sonnet-5-5[1m]",
  "giga.heavy · 1.vision · dimensional-decomposition → (bhrain default)",
  "giga.heavy · 1.vision · experience-coverage → (bhrain default)",
  "giga.heavy · 3.3.1.blueprint.product · repo-rules → (bhrain default)",
  "giga.heavy · 3.3.1.blueprint.product · mech-failhides → (bhrain default)",
  "giga.heavy · 3.3.1.blueprint.product · mech-decode-friction → (bhrain default)",
  "giga.heavy · 3.3.1.blueprint.product · arch-opport-decomposition → (bhrain default)",
  "giga.heavy · 3.3.1.blueprint.product · arch-smell-scopeleaks → (bhrain default)",
  "giga.heavy · 3.3.1.blueprint.product · arch-hazards-maintenance → (bhrain default)",
  "giga.heavy · 3.3.1.blueprint.product · arch-hazards-behavior → (bhrain default)",
  "giga.heavy · 3.3.1.blueprint.product · arch-ambiguous-terms → (bhrain default)",
  "giga.heavy · 3.3.1.blueprint.product · ergo-acceptance-journey-coverage → (bhrain default)",
  "giga.heavy · 3.3.1.blueprint.product · ergo-snapshot-visual-blemishes → (bhrain default)",
  "giga.heavy · 3.3.1.blueprint.product · enroll-blueprint-arch-defects → claude-sonnet-5-5[1m]",
  "giga.heavy · 3.3.1.blueprint.product · enroll-blueprint-behavior-intent → claude-sonnet-5-5[1m]",
  "giga.heavy · 5.1.execution.phase0_to_phaseN · repo-rules → (bhrain default)",
  "giga.heavy · 5.1.execution.phase0_to_phaseN · mech-failhides → (bhrain default)",
  "giga.heavy · 5.1.execution.phase0_to_phaseN · mech-decode-friction → (bhrain default)",
  "giga.heavy · 5.1.execution.phase0_to_phaseN · arch-opport-decomposition → (bhrain default)",
  "giga.heavy · 5.1.execution.phase0_to_phaseN · arch-smell-scopeleaks → (bhrain default)",
  "giga.heavy · 5.1.execution.phase0_to_phaseN · arch-hazards-maintenance → (bhrain default)",
  "giga.heavy · 5.1.execution.phase0_to_phaseN · arch-hazards-behavior → (bhrain default)",
  "giga.heavy · 5.1.execution.phase0_to_phaseN · behavior-intent-coverage → (bhrain default)",
  "giga.heavy · 5.1.execution.phase0_to_phaseN · ergo-friction-hazards → (bhrain default)",
  "giga.heavy · 5.1.execution.phase0_to_phaseN · enroll-impl-behavior-intent → claude-sonnet-5-5[1m]",
  "giga.heavy · 5.1.execution.phase0_to_phaseN · enroll-impl-arch-defects → claude-sonnet-5-5[1m]",
  "giga.heavy · 5.3.verification · repo-rules → (bhrain default)",
  "giga.heavy · 5.3.verification · ergo-contract-snapshots → (bhrain default)",
  "giga.heavy · 5.3.verification · mech-external-contracts → (bhrain default)",
  "giga.heavy · 5.3.verification · ergo-acceptance-journey-coverage → (bhrain default)",
  "giga.heavy · 5.3.verification · behavior-experience-coverage → (bhrain default)",
  "giga.heavy · 5.3.verification · ergo-snapshot-visual-blemishes → (bhrain default)",
  "giga.heavy · 5.3.verification · mech-given-when-then → (bhrain default)",
  "giga.heavy · 5.3.verification · mech-test-intent → (bhrain default)",
  "giga.heavy · 5.3.verification · mech-test-scope-purity → (bhrain default)",
  "giga.heavy · 5.3.verification · enroll-verif-snapshot-coverage → claude-sonnet-5-5[1m]",
  "giga.heavy · 5.3.verification · enroll-verif-snapshot-blemishes → claude-sonnet-5-5[1m]",
  "giga.heavy · 5.3.verification · enroll-verif-test-intent → claude-sonnet-5-5[1m]",
]
`;
